Transaction initial APIs completed
